--- a/Lesson_4/css/main.css
+++ b/Lesson_4/css/main.css
@@ -21,7 +21,7 @@ body{
 
 .top_container{
   width: 100%;
-  height: 81px;
+  min-height: 81px;
   background-color: #1D2126;
   display: flex;
   justify-content: center;
@@ -56,7 +56,7 @@ body{
   }
 
   ul{
-    margin-top: 22px;
+    margin-top: 26px;
     display: flex;
     justify-content: space-between;
     height: 40px;
@@ -64,9 +64,11 @@ body{
   }
 
   .ul_menu li{
-    padding: 8px 10px;
+    padding: 2px 10px;
+    padding-top: 3px;
     font-size: 14px;
     cursor: pointer;
+    height: 30px;
     margin-right: 16px;
     border: 2px solid transparent;
     color: #CCD0D7;
@@ -98,8 +100,9 @@ body{
 
   }
 
-  ul.ul_menu li:first-child:hover {
+  ul.ul_menu li:first-child {
     border-color: #229D8E;
+      border-radius: 4px;
 
   }
 
@@ -295,8 +298,9 @@ hr{
 }
 
 .photos_box{
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 30px;
 }
 
 .people_photo{
@@ -315,7 +319,7 @@ hr{
 }
 
 .horisontal_grey_box h6{
-  padding-top: 20px;
+  padding-top: 18px;
   padding-left: 20px;
   padding-right: 20px;
   font-family: "Quattrocento Sans";
@@ -336,6 +340,16 @@ hr{
   background-color: #3A454D;
 }
 
+.people_photo:hover .horisontal_grey_box h6{
+  background-color: #3A454D;
+  color: #FFF;
+}
+
+.people_photo:hover .horisontal_grey_box p{
+  background-color: #3A454D;
+  color: #FFF;
+}
+
 .people_photo:hover img{
   opacity: 0.6;
 }
@@ -345,7 +359,7 @@ hr{
 }
 
 .content_second{
-  padding-bottom: 97px;
+  padding-bottom: 98px;
 }
 
 .center_second .main_headline{
@@ -453,6 +467,7 @@ hr{
 
 .grey_lovely_box{
   background-color: #292F36;
+
 }
 
 .grey_lovely_box p{
@@ -461,6 +476,10 @@ hr{
   padding-top: 24px;
   padding-bottom: 20px;
   color: #FFFFFF;
+  padding-left: 10px;
+  white-space: nowrap; /* Отменяем перенос текста */
+  overflow: hidden; /* Обрезаем содержимое */
+  text-overflow: ellipsis;
 }
 
 .lovely_photo_hover{
@@ -645,6 +664,7 @@ textarea{
   height: 155px;
   border-radius: 4px;
   padding-bottom: 30px;
+  resize: none;
 }
 
 
@@ -665,6 +685,10 @@ textarea{
   border: 2px solid #23B7A4;
   padding: 13px 22px 5px 20px;
   margin-right: 10px;
+}
+
+.content_sixth .form_bottom button:hover{
+  opacity: 0.6;
 }
 
 .footer{
@@ -697,12 +721,13 @@ textarea{
   color: #23B7A4;
 }
 
-button:hover{
-  opacity: 0.5;
-}
-
 
 @media (min-width:1025px) and (max-width:1199px) {
+
+    .ul_menu li{
+      padding: 0px 10px;
+      padding-top: 3px;
+    }
 
   .top_header img {
     margin-left: 30px;
@@ -813,7 +838,7 @@ button:hover{
   }
 
   ul{
-    margin-top: 22px;
+    margin-top: 25px;
     display: flex;
     justify-content: space-between;
     height: 40px;
@@ -821,7 +846,7 @@ button:hover{
   }
 
   .ul_menu li{
-    padding: 7px 9px;
+    padding: 4px 9px;
     font-size: 14px;
     cursor: pointer;
     margin-right: 12px;
@@ -944,6 +969,7 @@ button:hover{
 
   .social_icons{
     margin-top: 40px;
+    margin-bottom: 40px;
   }
 
   .social_icons a{
@@ -1049,40 +1075,35 @@ button:hover{
 
 @media (min-width:501px) and  (max-width:792px) {
 
-  ul.ul_menu li{
-  display: none;
-  }
-
-
-
-  .icon-close {
+  .top_header{
     display: block;
-    cursor: pointer;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 6px;
+    min-height: 81px;
+    text-align: center;
   }
 
-  .icon-close i{
-    display: block;
-    font-size: 30px;
+  ul{
+    margin-top: 18px;
+    display: flex;
+    justify-content: space-between;
+    height: 40px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 
-  .mobmenu {
-      background-color: #1D2126;
-      color: #FFF;
-      cursor: pointer;
-      width: auto;
-      border: none;
-      outline: none;
-      transition: 0.4s;
-      float: right;
-      display: block;
-      font-size: 30px;
-      padding-right: 20px;
-      margin-right: 20px;
-      margin-bottom: 5px;
-      margin-top: 0.6em;
+  .ul_menu li{
+    padding: 4px 8px;
+    font-size: 12px;
+    margin-right: 0px;
+
+  }
+
+
+  ul.ul_menu li:first-child{
+    margin-right: 0px;
+  }
+
+  ul.ul_menu li:last-child{
+    margin-right: 0px;
   }
 
   .top_header img {
@@ -1091,7 +1112,7 @@ button:hover{
 
   .banner_content{
     padding: 40px 20px 40px;
-    width: 85%;
+    width: 95%;
     margin: 0 0;
   }
 
@@ -1203,6 +1224,8 @@ button:hover{
   }
 
   .grey_lovely_box p{
+    white-space: nowrap; /* Отменяем перенос текста */
+    overflow: hidden; /* Обрезаем содержимое */
     font-size: 13px;
     padding-top: 16px;
     padding-bottom: 12px;
@@ -1371,47 +1394,59 @@ button:hover{
 
 @media (max-width:500px) {
 
-  ul.ul_menu li{
-  display: none;
-  }
+    .top_header{
+      display: block;
+      text-align: center;
+    }
+
+
+    ul{
+      margin-top: 15px;
+      display: flex;
+      justify-content: space-between;
+      max-height: 30px;
+      margin-right: 0px;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+
+    .ul_menu li{
+      padding: 0px 0px;
+      padding-top: 0px;
+      font-size: 9px;
+      cursor: pointer;
+      max-height: 30px;
+      margin-right: 0px;
+      border: 0px solid transparent;
+      color: #CCD0D7;
+      cursor: pointer;
+      list-style-type: none;
+      font-weight: 550;
+    }
+
+    .ul_menu a{
+      color: #B2BBBA;
+      text-decoration: none;
+    }
+
+    ul.ul_menu li:first-child{
+      margin-right: 0px;
+    }
+
+    ul.ul_menu li:last-child{
+      margin-right: 0px;
+    }
+
+
   .content_fifth .main_headline {
       padding-top: 45px;
       padding-bottom: 30px;
   }
 
 
-  .icon-close {
-    display: block;
-    cursor: pointer;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 6px;
-  }
-
-  .icon-close i{
-    display: block;
-    font-size: 30px;
-  }
-
-  .mobmenu {
-      background-color: #1D2126;
-      color: #FFF;
-      cursor: pointer;
-      width: auto;
-      border: none;
-      outline: none;
-      transition: 0.4s;
-      float: right;
-      display: block;
-      font-size: 30px;
-      padding-right: 20px;
-      margin-right: 20px;
-      margin-bottom: 5px;
-      margin-top: 0.6em;
-  }
-
   .top_header img {
-    margin-left: 15px;
+    margin-top: 25px;
+    margin-left: 0px;
   }
 
   .banner_content{
@@ -1675,19 +1710,26 @@ button:hover{
   }
 
   .flex{
-    padding-top: 20px;
+    display: block;
+
+    padding-top: 25px;
     padding-bottom: 20px;
   }
 
   .flex p{
     font-size: 11px;
     color: #FFF;
+    text-align: center;
   }
 
   .icons_footer a{
     font-size: 14px;
     color: #FFF;
-    margin-right: 15px;
+    margin-right: 10px;
+  }
+
+  .icons_footer a:last-child{
+    margin-right: 0px;
   }
 
   .content_fifth .main_headline h3 {
@@ -1695,6 +1737,8 @@ button:hover{
   }
 
   .icons_footer {
-  margin-left: 15px;
+  margin-left: 0px;
+  padding-top: 10px;
+  text-align: center;
   }
 }
