--- a/Marvel/css/main.css
+++ b/Marvel/css/main.css
@@ -1,6 +1,7 @@
 /*  General Style   */
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 h2 {
@@ -14,7 +15,7 @@ h2 {
 h3 {
   font: 44px Montserrat, sans-serif;
   text-transform: uppercase;
-  font-weight: bolder;
+  font-weight: 700;
   color: #FFF;
   padding-top: 265px;
 }
@@ -23,8 +24,7 @@ h4 {
   color: #444444;
   font: 28px Muli, sans-serif;
   text-transform: uppercase;
-  font-weight: bolder;
-  margin-top: -50px;
+  margin-top: -52px;
   margin-bottom: 20px;
 }
 
@@ -52,16 +52,17 @@ p {
 }
 
 .top_header h1 {
-  padding-top: 500px;
+  padding-top: 580px;
   font: 60px Montserrat, sans-serif;
   text-transform: uppercase;
-  font-weight: 950;
+  padding-left: 50px;
+  font-weight: 800;
   color: #444444;
 }
 
 .top_header p {
   padding-top: 85px;
-  font: 13px Muli, sans-serif;
+  font: 13px Lato, sans-serif;
   color: #878787;
   max-width: 765px;
 }
@@ -72,18 +73,29 @@ p {
 
 .form-main-button button {
   font: 16px Montserrat, sans-serif;
+  font-weight: 600;
   padding: 20px 30px;
   color: #444444;
   border: 1px solid #444444;
   margin-top: 20px;
-  background-color: #FCFCFC;
+  background-color: #FFFFFF;
+}
+
+.form-main-button button:hover {
+  background-color: #FFE400;
 }
 
 .header_menu_background {
   background-color: #2A2A2A;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .header_menu {
+  position: sticky;
+  top: 0;
+  z-index: 10;
   display: flex;
   justify-content: space-between;
   max-width: 1140px;
@@ -116,7 +128,7 @@ p {
   text-decoration: none;
 }
 
-ul.ul_menu li:first-child a {
+.ul_menu a:hover {
   color: #FFE400;
 }
 
@@ -137,10 +149,21 @@ ul.ul_menu li:last-child {
   text-align: center;
 }
 
+.page_about h2 {
+  font-weight: 900;
+}
+
+.page_about h4 {
+  font-weight: 900;
+}
+
 .page_about p {
+  font: 16px Lato, sans-serif;
+  font-weight: 400;
   max-width: 945px;
   margin: 0 auto;
   padding-bottom: 70px;
+  color: #757575;
 }
 
 .page_about .form-main-button button {
@@ -148,19 +171,21 @@ ul.ul_menu li:last-child {
   padding: 20px 0px;
   width: 220px;
   border: 1px solid #444444;
-  font-weight: bolder;
-}
-
-.page_about .form-main-button button:first-child {
-  margin-right: 15px;
+  font-weight: 500;
+  text-transform: none;
   color: #FFE400;
   background-color: #000;
+  margin-right: 15px;
 }
 
 .page_about .form-main-button button:last-child {
-  margin-left: 15px;
+  margin-right: 0px;
+}
+
+.page_about .form-main-button button:hover {
   color: #000;
   background-color: #FFE400;
+  border: 1px solid #FFE400;
 }
 
 .first_content_text_block {
@@ -177,24 +202,33 @@ ul.ul_menu li:last-child {
   font-size: 100px;
 }
 
-.first_c_text_block:nth-child(odd) {
+.first_c_text_block {
   background-color: #212121;
   color: #FFF;
   text-align: center;
 }
 
-.first_c_text_block:nth-child(odd) i {
+.first_c_text_block i {
   padding-top: 90px;
   padding-bottom: 55px;
   color: #FFE400;
 }
 
-.first_c_text_block:nth-child(odd) h6 {
+.first_c_text_block h6 {
   font: 24px Montserrat, sans-serif;
   padding-bottom: 130px;
+  font-weight: 700;
 }
 
-.first_c_text_block:nth-child(even) {
+.first_c_text_block p {
+  display: none;
+}
+
+.first_c_text_block:hover p {
+  display: block;
+}
+
+.first_c_text_block:hover {
   background: url(../img/hover-about.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -202,14 +236,16 @@ ul.ul_menu li:last-child {
   text-align: center;
 }
 
-.first_c_text_block:nth-child(even) i {
+.first_c_text_block:hover i {
   padding-top: 50px;
   padding-bottom: 45px;
+  color: #FFF;
 }
 
-.first_c_text_block:nth-child(even) h6 {
+.first_c_text_block:hover h6 {
   font: 24px Montserrat, sans-serif;
   padding-bottom: 33px;
+  font-weight: 700;
 }
 
 .first_block_statistics {
@@ -221,7 +257,7 @@ ul.ul_menu li:last-child {
   font: 30px Montserrat, sans-serif;
   color: #444444;
   text-transform: uppercase;
-  font-weight: bolder;
+  font-weight: 700;
   text-align: center;
   margin-bottom: 120px;
 }
@@ -243,11 +279,11 @@ ul.ul_menu li:last-child {
   font: 36px Montserrat, sans-serif;
   color: #444444;
   text-transform: uppercase;
-  font-weight: bolder;
+  font-weight: 700;
 }
 
 .first_statistics p:last-child {
-  font: 13px Montserrat, sans-serif;
+  font: 12px Montserrat, sans-serif;
   color: #878787;
   padding-bottom: 145px;
 }
@@ -267,10 +303,16 @@ ul.ul_menu li:last-child {
 .responsive_page h2 {
   padding-top: 175px;
   margin-left: -8px;
+  color: #FFE400;
+}
+
+.responsive_page h4 {
+  font-weight: 800;
 }
 
 .responsive_page p {
   max-width: 555px;
+  color: #757575;
 }
 
 .ul_second_block_list {
@@ -294,6 +336,11 @@ ul.ul_menu li:last-child {
   border: 0px solid #FFE400;
   font-weight: bolder;
   text-transform: uppercase;
+}
+
+.responsive_page .form-block-button button:hover {
+  color: #FFE400;
+  background-color: #000;
 }
 
 .responsive_page .form-block-button {
@@ -325,12 +372,10 @@ ul.ul_menu li:last-child {
   font: 18px Montserrat, sans-serif;
   padding: 20px 0px;
   width: 225px;
-  font-weight: bolder;
+  font-weight: 500;
   margin-top: 0px;
   margin-bottom: 125px;
-}
-
-.marvel_who_we_are .form-main-button button:first-child {
+  text-transform: none;
   margin-right: 15px;
   color: #FFF;
   background-color: inherit;
@@ -338,24 +383,13 @@ ul.ul_menu li:last-child {
 }
 
 .marvel_who_we_are .form-main-button button:last-child {
-  margin-left: 15px;
+  margin-right: 0px;
+}
+
+.marvel_who_we_are .form-main-button button:hover {
   color: #000;
   background-color: #FFE400;
   border: 1px solid #444444;
-}
-
-.marvel_who_we_are .form-main-button button:first-child:hover {
-  margin-right: 15px;
-  color: #000;
-  background-color: #FFE400;
-  border: 1px solid #444444;
-}
-
-.marvel_who_we_are .form-main-button button:last-child:hover {
-  margin-left: 15px;
-  color: #FFF;
-  background-color: inherit;
-  border: 1px solid #FFF;
 }
 
 /* Fourth Block  */
@@ -391,6 +425,10 @@ ul.ul_menu li:last-child {
   padding-bottom: 15px;
 }
 
+.fourth_similar_block_text p {
+  color: #757575;
+}
+
 .fourth_similar_block_circle {
   max-width: 65px;
   max-height: 65px;
@@ -402,9 +440,19 @@ ul.ul_menu li:last-child {
   color: #212121;
 }
 
+.fourth_similar_block:nth-child(2n+1):hover .fourth_similar_block_circle {
+  background-color: #212121;
+  color: #FFE400;
+}
+
 .fourth_similar_block:nth-child(2n) .fourth_similar_block_circle {
   background-color: #212121;
   color: #FFE400;
+}
+
+.fourth_similar_block:nth-child(2n):hover .fourth_similar_block_circle {
+  background-color: #FFE400;
+  color: #212121;
 }
 
 .fourth_similar_block_circle i {
@@ -433,8 +481,15 @@ ul.ul_menu li:last-child {
   background-color: inherit;
   border: 1px solid #000;
   width: 95px;
+  font-weight: 700;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.work_page_buttons .form-block-button button:hover {
+  color: #FFE400;
+  background-color: #000;
+  border: 1px solid #000;
 }
 
 .work_page_buttons .form-block-button button:last-child {
@@ -449,11 +504,99 @@ ul.ul_menu li:last-child {
   padding: 11px;
 }
 
-.fouth_photos_block {
+.work_page_buttons .form-block-button i:hover {
+  color: #FFE400;
+  background-color: #000;
+  border: 1px solid #000;
+}
+
+.fifth_photos_block {
   background-color: #FFF;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 0px;
+}
+
+.container_to_photos_block {
+  position: relative;
+  z-index: 1;
+}
+
+.text_hover_to_photos_block {
+  position: relative;
+  z-index: 2;
+}
+
+.text_hover_to_photos_block .icons_to_photo_block {
+  position: relative;
+  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 50px;
+  max-width: 25%;
+  border-radius: 25px;
+  background-color: #E8E8E8;
+  margin-top: -95px;
+  z-index: 5;
+}
+
+.icon_circle {
+  height: 25px;
+  width: 25px;
+  border-radius: 13px;
+  border: 1px solid #000;
+  background-color: #FFF;
+  margin-right: 11px;
+  z-index: 5;
+}
+
+.container_to_photos_block:hover .fifth_photos_block {
+  background-color: #E8E8E8;
+}
+
+.icon_circle i {
+  color: #000;
+  font-size: 13px;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+.icon_circle:hover {
+  border: 1px solid #FFE400;
+  background-color: #FFE400;
+}
+
+.text_to_photo_block {
+  display: flex;
+  background-color: #E8E8E8;
+  z-index: 4;
+  margin-top: -27px;
+}
+
+.text_to_photo_block h6 {
+  font: 14px Montserrat, sans-serif;
+  font-weight: bolder;
+  text-transform: uppercase;
+  color: #444444;
+  padding-bottom: 25px;
+  padding-left: 10px;
+  padding-top: 25px;
+}
+
+.text_to_photo_block p {
+  padding-top: 30px;
+  color: #757575;
+  font: 9px Muli, sans-serif;
+  text-transform: uppercase;
+}
+
+.text_hover_to_photos_block {
+  display: none;
+}
+
+.container_to_photos_block:hover .text_hover_to_photos_block {
+  display: block;
 }
 
 /*   Sixth content   */
@@ -466,13 +609,14 @@ ul.ul_menu li:last-child {
 .six_content {
   max-width: 1140px;
   margin: 0 auto;
-  padding-bottom: 65px;
 }
 
 .service_page {
   max-width: 555px;
   margin-left: auto;
   margin-right: 0;
+  padding-bottom: 65px;
+  background-color: #FFF;
 }
 
 .service_page h2 {
@@ -490,15 +634,19 @@ ul.ul_menu li:last-child {
   text-align: center;
 }
 
+.service_page_content_block:hover {
+  background-color: #E8E8E8;
+}
+
 .service_page_content_block i {
   padding-top: 45px;
   font-size: 32px;
-  color: #757575;
+  color: #444444;
 }
 
 .service_page_content_block h6 {
   font: 18px Montserrat, sans-serif;
-  color: #757575;
+  color: #444444;
   font-weight: bolder;
   text-transform: uppercase;
   padding-top: 35px;
@@ -508,6 +656,7 @@ ul.ul_menu li:last-child {
   padding-top: 35px;
   padding-bottom: 60px;
   text-align: center;
+  color: #757575;
 }
 
 /*  Seven Content  */
@@ -545,9 +694,10 @@ ul.ul_menu li:last-child {
 }
 
 .grey_top_price_block p {
-  font-size: 15px;
+  font: 15px Muli, sans-serif;
   padding-top: 10px;
   padding-bottom: 12px;
+  color: #444444;
 }
 
 .price_block:nth-child(2) {
@@ -573,8 +723,8 @@ ul.ul_menu li:last-child {
 .top_content_price_block h6 {
   padding-top: 25px;
   padding-bottom: 25px;
-  font-size: 18px;
-  font-family: "Poppins";
+  font: 18px Poppins, sans-serif;
+  font-weight: 500;
 }
 
 .top_content_price_block p:last-child {
@@ -587,15 +737,19 @@ ul.ul_menu li:last-child {
 }
 
 .price_per_month p:nth-child(1) {
-  padding-top: 10px;
+  padding-top: 8px;
+  font: 26px Poppins, sans-serif;
 }
 
 .price_per_month p:nth-child(2) {
-  font-size: 48px;
+  font: 48px Poppins, sans-serif;
+  font-weight: 700;
 }
 
 .price_per_month p:nth-child(3) {
-  padding-top: 30px;
+  padding-top: 35px;
+  padding-left: 5px;
+  font: 14px Poppins, sans-serif;
 }
 
 .main_content_price_block {
@@ -617,12 +771,19 @@ ul.ul_menu li:last-child {
 }
 
 .form-price_bottom-button button {
+  font: 14px Montserrat, sans-serif;
+  font-weight: 600;
   color: #444444;
   background-color: #FFF;
   padding-top: 16px;
   padding-bottom: 14px;
   width: 360px;
   border: 0px;
+}
+
+.form-price_bottom-button button:hover {
+  color: #FFE400;
+  background-color: #000;
 }
 
 /*   Eigth Content      */
@@ -644,41 +805,85 @@ ul.ul_menu li:last-child {
   padding-top: 110px;
 }
 
-.expert_block:nth-child(2) {
+.expert_block:hover {
   background-color: #FFE400;
 }
 
-.expert_block:nth-child(2) h5 {
+.expert_block:hover img {
+  display: none;
+}
+
+.expert_block:hover .text_about_expert {
+  background-color: #FFE400;
+}
+
+.expert_block:hover h5 {
   padding-top: 90px;
   font: 24px Montserrat, sans-serif;
   font-weight: bolder;
   text-transform: uppercase;
+  color: #000;
 }
 
-.expert_block:nth-child(2) h6 {
+.expert_block:hover h6 {
   padding-top: 15px;
   font: 16px Montserrat, sans-serif;
   font-weight: bolder;
   text-transform: uppercase;
+  color: #000;
 }
 
-.expert_block:nth-child(2) p {
+.social_icons a:hover i {
+  color: #000;
+}
+
+.expert_block:hover p {
+  font: 12px Muli, sans-serif;
   padding-top: 70px;
   padding-left: 40px;
   padding-right: 40px;
-  font-weight: bold;
+  font-weight: 700;
   padding-bottom: 120px;
+  color: #000;
 }
 
-.expert_block:nth-child(2) hr {
+.expert_block:hover hr {
   border-top: 1px dashed #6B6000;
   width: 80%;
   margin: 0 auto;
 }
 
+.expert_block:hover hr:first-of-type {
+  display: none;
+}
+
+.expert_block .social_icons {
+  display: none;
+}
+
+.expert_block:hover .social_icons {
+  display: block;
+}
+
+.expert_block p {
+  display: none;
+}
+
+.expert_block:hover p {
+  display: block;
+}
+
+.expert_block hr:last-of-type {
+  display: none;
+}
+
+.expert_block:hover hr:last-of-type {
+  display: block;
+}
+
 .expert_block .social_icons i {
   color: #6B6000;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .expert_block .social_icons {
@@ -697,11 +902,20 @@ ul.ul_menu li:last-child {
   background-color: #E8E8E8;
 }
 
-.text_about_expert h6 {
+.expert_block h5 {
   padding-top: 20px;
   padding-bottom: 20px;
   font: 16px Montserrat, sans-serif;
-  color: #757575;
+  color: #444444;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.text_about_expert h6 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font: 11px Montserrat, sans-serif;
+  color: #444444;
   font-weight: bolder;
   text-transform: uppercase;
 }
@@ -716,7 +930,7 @@ ul.ul_menu li:last-child {
   padding-top: 20px;
   padding-bottom: 20px;
   font: 11px Montserrat, sans-serif;
-  color: #757575;
+  color: #444444;
   font-weight: bolder;
   text-transform: uppercase;
 }
@@ -736,7 +950,7 @@ ul.ul_menu li:last-child {
 
 .impressed_by_our_work h3 {
   padding-top: 110px;
-  font: 30px Muli, sans-serif;
+  font: 30px Lato, sans-serif;
   color: #FFF;
   font-weight: bolder;
   text-transform: uppercase;
@@ -752,15 +966,18 @@ ul.ul_menu li:last-child {
 .form-main-button button {
   text-transform: uppercase;
   color: #000;
+  font: 13px Lato, sans-serif;
+  font-weight: 700;
   margin-bottom: 105px;
   /*  width: 170px;*/
 }
 
-.form-main-button button:first-child {
-  background-color: #FFE400;
+/*
+.form-main-button button:first-child{
+  background-color: $color_for_yellow;
   margin-right: 15px;
 }
-
+*/
 /*  Ten Content    */
 .tenth_content {
   max-width: 1140px;
@@ -772,6 +989,43 @@ ul.ul_menu li:last-child {
   padding-top: 120px;
 }
 
+.left_hover_photo-news, .right_hover_photo-news {
+  width: 25px;
+  height: 25px;
+  border-radius: 13px;
+  border: 1px solid #FFF;
+  color: #FFF;
+}
+
+.left_hover_photo-news:hover, .right_hover_photo-news:hover {
+  border: 1px solid #000;
+  color: #FFF;
+  background-color: #000;
+}
+
+.hover_photo-news {
+  display: none;
+  position: relative;
+  z-index: 3;
+}
+
+.similar_news_photo_block img {
+  position: relative;
+  z-index: 1;
+}
+
+.similar_news_photo_block:hover .hover_photo-news {
+  display: flex;
+  justify-content: space-between;
+  margin-top: -50px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.similar_news_photo_block:hover .grey_block_under_news_photo {
+  margin-top: 2px;
+}
+
 .news_photo_block {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -779,14 +1033,45 @@ ul.ul_menu li:last-child {
   padding-top: 100px;
 }
 
+.hover_news_video {
+  display: none;
+  position: relative;
+  z-index: 3;
+}
+
+.similar_news_photo_block:hover .hover_news_video {
+  display: block;
+  width: 50px;
+  height: 50px;
+  color: #FFF;
+  margin: 0 auto;
+  margin-top: -120px;
+  margin-bottom: 47px;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: #000;
+}
+
+.similar_news_photo_block .hover_news_video:hover {
+  color: #FFE400;
+}
+
+.hover_news_video p {
+  font-size: 28px;
+  padding-top: 5px;
+  padding-left: 5px;
+}
+
 .grey_block_under_news_photo p {
-  font: 13px Montserrat, sans-serif;
+  font: 12px Montserrat, sans-serif;
   text-transform: uppercase;
   font-weight: bolder;
   padding: 10px 25px;
 }
 
 .grey_block_under_news_photo {
+  position: relative;
   background-color: #F9F9F9;
   color: #444444;
   border-radius: 20px;
@@ -794,6 +1079,7 @@ ul.ul_menu li:last-child {
   margin: 0 auto;
   margin-top: -23px;
   margin-bottom: 20px;
+  z-index: 2;
 }
 
 .similar_news_photo_block h6 {
@@ -813,7 +1099,6 @@ ul.ul_menu li:last-child {
 .text_to_ten_block p:last-child {
   padding-top: 30px;
   font: 16px Muli, sans-serif;
-  font-weight: bolder;
   color: #757575;
 }
 
@@ -831,6 +1116,12 @@ ul.ul_menu li:last-child {
   padding: 10px 20px;
   border-radius: 15px;
   border: 2px solid  #F9F9F9;
+}
+
+.link_ten_block a:hover {
+  color: #444444;
+  background-color: #FFE400;
+  border: 2px solid #444444;
 }
 
 /*  Eleven Content  */
@@ -864,6 +1155,7 @@ ul.ul_menu li:last-child {
   width: 100%;
   height: 60px;
   padding-left: 20px;
+  border: 1px solid #E8E8E8;
 }
 
 textarea {
@@ -875,6 +1167,7 @@ textarea {
   height: 510px;
   padding-bottom: 25px;
   resize: none;
+  border: 1px solid #E8E8E8;
 }
 
 .message .form-main-button {
@@ -886,6 +1179,12 @@ textarea {
   font: 17px Montserrat, sans-serif;
   font-weight: bolder;
   margin-bottom: 135px;
+  background-color: #FFE400;
+}
+
+.message .form-main-button button:hover {
+  background-color: #444444;
+  color: #FFE400;
 }
 
 /*  Footer   */
@@ -934,6 +1233,10 @@ textarea {
   font-size: 20px;
 }
 
+.footer_social_icons i:hover {
+  color: #FFE400;
+}
+
 .footer_social_icons a {
   margin-right: 35px;
 }
@@ -951,11 +1254,19 @@ textarea {
   margin-top: 60px;
 }
 
+.footer_circle:hover {
+  border: 1px solid #FFE400;
+}
+
 .footer_circle i {
   font-size: 22px;
   padding-left: 0px;
   padding-top: 12px;
   color: #FFF;
+}
+
+.footer_circle:hover i {
+  color: #FFE400;
 }
 
 .flang_content_footer p {
@@ -980,6 +1291,112 @@ textarea {
 
 .bottom_footer p {
   font: 12px Muli, sans-serif;
+}
+
+@media (min-width: 1025px) and (max-width: 1199px) {
+  /* Header */
+  .top_header h1 {
+    padding-top: 250px;
+    font: 50px Montserrat, sans-serif;
+    font-weight: 800;
+  }
+
+  .top_header form {
+    padding-bottom: 150px;
+  }
+
+  .top_header p {
+    padding-left: 50px;
+  }
+
+  .top_header form {
+    padding-left: 50px;
+  }
+
+  .header_menu img {
+    padding-left: 20px;
+  }
+
+  .header_menu ul {
+    margin-right: 20px;
+  }
+
+  .ul_menu li {
+    padding-right: 50px;
+  }
+
+  /* First */
+  .first_content_text_block {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  /* Second  */
+  .responsive_page {
+    padding-left: 20px;
+  }
+
+  /* Third */
+  .marvel_who_we_are h3 {
+    padding-top: 180px;
+  }
+
+  /* Seven  */
+  .seven_price_blocks {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 120px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 30px;
+  }
+
+  .form-price_bottom-button button {
+    width: 100%;
+  }
+
+  /* Eight Content*/
+  .expert_page h2 {
+    padding-top: 150px;
+  }
+
+  .expert_page {
+    padding-bottom: 250px;
+  }
+
+  .expert_content_blocks {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .expert_content_blocks:first-child {
+    padding-top: 110px;
+  }
+
+  .expert_block:hover h5 {
+    padding-top: 60px;
+  }
+
+  .expert_block:hover p {
+    padding-top: 50px;
+    padding-bottom: 70px;
+  }
+
+  /* Ten   */
+  .news_photo_block {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 100px;
+  }
+
+  /* Eleven  */
+  .form_bottom {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
