Fix_bug_with_photos

--- a/Marvel/css/main.css
+++ b/Marvel/css/main.css
@@ -2088,6 +2088,13 @@ textarea {
     padding: 10px;
   }
 
+  .fifth_photos_block {
+    background-color: #FFF;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0px;
+  }
+
   /*   Sixth content   */
   .sixth_background {
     background: none;
